Make hero element fixed height; Fix scaling issues; Fix playback issues on iOS;

--- a/static/css/device.css
+++ b/static/css/device.css
@@ -1,14 +1,7 @@
 .device {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
     width: 300px;
     height: 574px;
     transform-style: preserve-3d;
-    transition: transform 1s;
 }
 
 .device > div {
